<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">phase3</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="Login">Login</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="Nurse">Nurse</string>
    <string name="Physician">Physician</string>
    <string name="login">login</string>
    <string name="title_activity_choice">ChoiceActivity</string>
    <string name="title_activity_physician__choice">Physician_ChoiceActivity</string>
    <string name="Hello">Hello</string>
    <string name="Add_a_new_patient">Add a new patient</string>
    <string name="Add_VitalSign">Add VitalSign</string>
    <string name="title_activity_new_patient">NewPatientActivity</string>
    <string name="title_activity_add_vital_sign">AddVitalSignActivity</string>
    <string name="New_Patient">New Patient</string>
    <string name="patient_name">patient\'s name</string>
    <string name="Health_Card_Number">Health Card Number</string>
    <string name="Birthday">Birthday</string>
    <string name="Year">Year</string>
    <string name="Month">Month</string>
    <string name="Day">Day</string>
    <string name="Date">Date</string>
    <string name="Time">Time</string>
    <string name="Hour">Hour</string>
    <string name="Minute">Minute</string>
    <string name="Submit">Submit</string>
    <string name="VitalSign">VitalSign</string>
    <string name="Temperature">Temperature</string>
    <string name="Systolic">Systolic</string>
    <string name="Diastolic">Diastolic</string>
    <string name="Heartrate">Heartrate</string>
    <string name="View_Patient_Record">View Patient\'s Record</string>
    <string name="Add_Prescription">Add Prescription</string>
    <string name="title_activity_view_patient_record">ViewPatientRecord</string>
    <string name="title_activity_add_prescription">AddPrescription</string>
    <string name="Medication">Medication</string>
    <string name="Instruction">Instruction</string>
    <string name="Urgency_List">Urgency List</string>
    <string name="Record_check_in_time">Record Check-inTime</string>
    <string name="title_activity_urgency_list">UrgencyListActivity</string>
    <string name="title_activity_check_time">CheckTimeActivity</string>
    <string name="urgency_score">Urgency Score</string>
    <string name="patient_information">Patient Information</string>
    <string name="title_activity_patient_record">PatientRecordActivity</string>

</resources>
