<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Physician_ChoiceActivity" >

    <TextView
        android:id="@+id/hello1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Hello"
        android:textSize="30sp" />

    <Button
        android:id="@+id/view_record"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/hello1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        android:text="@string/View_Patient_Record"
        android:onClick="ViewPatientRecord" />

    <Button
        android:id="@+id/Add_Prescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/view_record"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        android:text="@string/Add_Prescription"
        android:onClick="AddPrescription" />

</RelativeLayout>