<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".AddPrescription" >

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Add_Prescription"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/cardnum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:hint="@string/Health_Card_Number"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/Medication"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView2"
        android:layout_below="@+id/cardnum"
        android:layout_marginTop="50dp"
        android:text="@string/Medication"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/medication"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/Medication"
        android:layout_alignBottom="@+id/Medication"
        android:layout_alignParentRight="true"
        android:layout_marginRight="50dp"
        android:hint="@string/Medication"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/instruction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/Medication"
        android:layout_below="@+id/medication"
        android:layout_marginTop="35dp"
        android:text="@string/Instruction"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/instruction1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/instruction"
        android:layout_alignBottom="@+id/instruction"
        android:layout_alignLeft="@+id/medication"
        android:hint="@string/Instruction"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/Submit11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/instruction1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="46dp"
        android:onClick="AddPrescription"
        android:text="@string/Submit" />

</RelativeLayout>